--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,19 +25,34 @@ add_dependencies(examples
 )
 
 add_executable(Console Console.c)
-target_link_libraries(Console NeoC)
+target_link_libraries(Console
+    NeoC
+    Threads::Threads
+)
 
 add_executable(Defer Defer.c)
-target_link_libraries(Defer NeoC)
+target_link_libraries(Defer
+    NeoC
+    Threads::Threads
+)
 
 add_executable(DeferInFunction DeferInFunction.c)
-target_link_libraries(DeferInFunction NeoC)
+target_link_libraries(DeferInFunction
+    NeoC
+    Threads::Threads
+)
 
 add_executable(Exception Exception.c)
-target_link_libraries(Exception NeoC)
+target_link_libraries(Exception
+    NeoC
+    Threads::Threads
+)
 
 add_executable(ExceptionNested ExceptionNested.c)
-target_link_libraries(ExceptionNested NeoC)
+target_link_libraries(ExceptionNested
+    NeoC
+    Threads::Threads
+)
 
 add_executable(Map Map.c)
 target_link_libraries(Map
@@ -52,34 +67,67 @@ target_link_libraries(SampleCode
 )
 
 add_executable(String String.c)
-target_link_libraries(String NeoC)
+target_link_libraries(String
+    NeoC
+    Threads::Threads
+)
 
 add_executable(System System.c)
-target_link_libraries(System NeoC)
+target_link_libraries(System
+    NeoC
+    Threads::Threads
+)
 
 add_executable(TCPClient TCPClient.c)
-target_link_libraries(TCPClient NeoC)
+target_link_libraries(TCPClient
+    NeoC
+    Threads::Threads
+)
 
 add_executable(TCPEchoServer TCPEchoServer.c)
-target_link_libraries(TCPEchoServer NeoC)
+target_link_libraries(TCPEchoServer
+    NeoC
+    Threads::Threads
+)
 
 add_executable(TCPServer TCPServer.c)
-target_link_libraries(TCPServer NeoC)
+target_link_libraries(TCPServer
+    NeoC
+    Threads::Threads
+)
 
 add_executable(Theme Theme.c)
-target_link_libraries(Theme NeoC)
+target_link_libraries(Theme
+    NeoC
+    Threads::Threads
+)
 
 add_executable(Theme2 Theme2.c)
-target_link_libraries(Theme2 NeoC)
+target_link_libraries(Theme2
+    NeoC
+    Threads::Threads
+)
 
 add_executable(Tuple Tuple.c)
-target_link_libraries(Tuple NeoC)
+target_link_libraries(Tuple
+    NeoC
+    Threads::Threads
+)
 
 add_executable(UDPClient UDPClient.c)
-target_link_libraries(UDPClient NeoC)
+target_link_libraries(UDPClient
+    NeoC
+    Threads::Threads
+)
 
 add_executable(UDPEchoServer UDPEchoServer.c)
-target_link_libraries(UDPEchoServer NeoC)
+target_link_libraries(UDPEchoServer
+    NeoC
+    Threads::Threads
+)
 
 add_executable(UDPServer UDPServer.c)
-target_link_libraries(UDPServer NeoC)
+target_link_libraries(UDPServer
+    NeoC
+    Threads::Threads
+)
