--- a/lib/NeoC/CMakeLists.txt
+++ b/lib/NeoC/CMakeLists.txt
@@ -12,9 +12,10 @@ endif()
 # https://cmake.org/cmake/help/latest/command/file.html#filesystem
 target_sources(NeoC
     PRIVATE
-	Collection/List.c
-	Collection/Map.c
-	Collection/Tuple.c
+    Collection/List.c
+    Collection/Map.c
+    Collection/Queue.c
+    Collection/Tuple.c
     Exception/Exception.c
     Exception/Signal.c
     #File/Directory.c
