--- a/lib/NeoC/CMakeLists.txt
+++ b/lib/NeoC/CMakeLists.txt
@@ -29,7 +29,7 @@ target_sources(NeoC
     System.c
     Socket.c
 
-    #Collection.c
+    #Collection/Collection.c
     #Collection/List.c
     #Collection/Map.c
     #Collection/Queue.c
