--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,11 +24,11 @@ add_dependencies(examples
     UDPServer
     UDPEchoServer
 
-    #List
-    #Map
-    #Queue
-    #Stack
     #Tuple
+    #List
+    #Stack
+    #Queue
+    #Map
 
     OOPMain
     #SampleCode
@@ -37,16 +37,19 @@ add_dependencies(examples
 add_executable(Object Base/Object.c)
 target_link_libraries(Object
     NeoC
+    Threads::Threads
 )
 
 add_executable(Exception Base/Exception/Exception.c)
 target_link_libraries(Exception
     NeoC
+    Threads::Threads
 )
 
 add_executable(ExceptionNested Base/Exception/ExceptionNested.c)
 target_link_libraries(ExceptionNested
     NeoC
+    Threads::Threads
 )
 
 add_executable(Defer Base/Defer.c)
@@ -67,19 +70,19 @@ target_link_libraries(String
     Threads::Threads
 )
 
-add_executable(Console Console.c)
+add_executable(Console Console/Console.c)
 target_link_libraries(Console
     NeoC
     Threads::Threads
 )
 
-add_executable(Theme Theme.c)
+add_executable(Theme Console/Theme.c)
 target_link_libraries(Theme
     NeoC
     Threads::Threads
 )
 
-add_executable(Theme2 Theme2.c)
+add_executable(Theme2 Console/Theme2.c)
 target_link_libraries(Theme2
     NeoC
     Threads::Threads
@@ -91,70 +94,68 @@ target_link_libraries(System
     Threads::Threads
 )
 
-add_executable(TCPClient TCPClient.c)
+add_executable(TCPClient Socket/TCPClient.c)
 target_link_libraries(TCPClient
     NeoC
     Threads::Threads
 )
 
-add_executable(TCPServer TCPServer.c)
+add_executable(TCPServer Socket/TCPServer.c)
 target_link_libraries(TCPServer
     NeoC
     Threads::Threads
 )
 
-add_executable(TCPEchoServer TCPEchoServer.c)
+add_executable(TCPEchoServer Socket/TCPEchoServer.c)
 target_link_libraries(TCPEchoServer
     NeoC
     Threads::Threads
 )
 
-add_executable(UDPClient UDPClient.c)
+add_executable(UDPClient Socket/UDPClient.c)
 target_link_libraries(UDPClient
     NeoC
     Threads::Threads
 )
 
-add_executable(UDPServer UDPServer.c)
+add_executable(UDPServer Socket/UDPServer.c)
 target_link_libraries(UDPServer
     NeoC
     Threads::Threads
 )
 
-add_executable(UDPEchoServer UDPEchoServer.c)
+add_executable(UDPEchoServer Socket/UDPEchoServer.c)
 target_link_libraries(UDPEchoServer
     NeoC
     Threads::Threads
 )
 
+add_executable(Tuple Collection/Tuple.c)
+target_link_libraries(Tuple
+    NeoC
+    Threads::Threads
+)
 
-add_executable(List List.c)
+add_executable(List Collection/List.c)
 target_link_libraries(List
     NeoC
     Threads::Threads
 )
 
-add_executable(Map Map.c)
-target_link_libraries(Map
-    NeoC
-    Threads::Threads
-)
-
-add_executable(Queue Queue.c)
-target_link_libraries(Queue
-    NeoC
-    Threads::Threads
-)
-
-add_executable(Stack Stack.c)
+add_executable(Stack Collection/Stack.c)
 target_link_libraries(Stack
     NeoC
     Threads::Threads
 )
 
+add_executable(Queue Collection/Queue.c)
+target_link_libraries(Queue
+    NeoC
+    Threads::Threads
+)
 
-add_executable(Tuple Tuple.c)
-target_link_libraries(Tuple
+add_executable(Map Collection/Map.c)
+target_link_libraries(Map
     NeoC
     Threads::Threads
 )
